infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1 # number of pods running this particular image
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: jvcjunior/client:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: client-srv
spec:
  selector: 
    app: client
  type: ClusterIP # default
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
