infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1 # number of pods running this particular image
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: jvcjunior/comments:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: comments-srv
spec:
  selector: 
    app: comments
  type: ClusterIP # default
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
