infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1 # number of pods running this particular image
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: jvcjunior/moderation:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: moderation-srv
spec:
  selector: 
    app: moderation
  type: ClusterIP # default
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
