infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1 # number of pods running this particular image
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: jvcjunior/query:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: query-srv
spec:
  selector: 
    app: query
  type: ClusterIP # default
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
